# oop_lab3

./: .gitignore  CMakeLists.txt  main.cpp
include/: array.h  figure.h  pentagon.h  point.h  rhombus.h  trapezoid.h
src/: array.cpp  figure.cpp  pentagon.cpp  rhombus.cpp  trapezoid.cpp
test/: tests.cpp
